<resources>
    <string name="app_name">TMOAndroidApp</string>

    <string name="my_account">My Account</string>
    <string name="my_bill">My Bill</string>
    <string name="shop">Shop</string>
    <string name="more">More</string>


    <!--Header/Toolbar-->
    <string name="hello">Hello</string>
    <string name="welcome_text">Welcome to the T-Mobile app</string>
    <string name="message_icon">Messaging Icon</string>
    <string name="home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="home_navigate">Navigate to home</string>
    <string name="customer_navigate">Navigate to TMO customer service</string>
    <string name="chat">Chat</string>

    <string name="saving_configuration_text">Saving…</string>
    <string name="action_save">Save as Custom Config</string>
    <string name="title_configurator">Configurator</string>
    <string name="action_load_defaults_prod">Load defaults</string>
    <string name="launcher_configurator_title">T-Mobile ID Agent Configurator</string>
    <string name="action_clear_cache">Clear App Storage</string>

    <string name="btn_ok">Ok</string>
    <string name="no_network_notice">No Network Connections! Try again later.</string>
    <string name="security_options">Security options</string>

    <string name="dbg_setting">Debug Settings</string>
    <string name="testconfigs">Test Configs</string>

    <string name="setting1_name">Setting Name1</string>
    <string name="setting2_name">Setting Name2</string>

    <string name="setting1_hint">Setting1 Hint</string>
    <string name="setting2_hint">Setting2 Hint</string>

    <string name="setting1">Setting1</string>
    <string name="setting2">Setting2</string>
    <string name="checkbox_description">Checkbox Description</string>

</resources>
