<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/configEnvContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/config_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/head_text_size"
        android:text="" />

    <Spinner
        android:id="@+id/config_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting1_name" />

            <EditText
                android:id="@+id/edit_setting1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting1"
                android:inputType="textUri"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting2_name" />

            <EditText
                android:id="@+id/edit_setting2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setting2"
                android:inputType="textUri"
                android:maxLines="1" />

            <Button
                android:id="@+id/btn_load_defaults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_load_defaults_prod" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_save" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
